[package]
name = "kuev-emu"
version = "0.1.0"
authors = ["AntKazakovv <propaneld@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.3.1"
[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
